...
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:id="@+id/tv_empty_pull_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/car_header1"
                android:text="@string/cars"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pulls_items"
                android:contentDescription="@string/car_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
